gcc/testsuite/gfortran.dg/empty_label.f90
! { dg-do compile }
100   ! { dg-error "Statement label without statement" }
end
